--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Build</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
                 <div class="header__inner">
                     <div class="header__logo">Build</div>
                     <ul class="header__nav">
-                        <li><a href="#">Main</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Order</a></li>
+                        <li><a href="#main">Main</a></li>
+                        <li><a href="#about">About us</a></li>
+                        <li><a href="#order">Order</a></li>
                     </ul>
                     <div class="header__burger burg js-burg">
                         <div class="burg__line"></div>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </header>
-        <section class="main">
+        <section class="main" id="main">
             <div class="container container_main">
                 <div class="main__wrapper">
                     <h1 class="main__title">Building Dreams</h1>
@@ -42,7 +42,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="about__wrapper">
                     <ul class="about__list">
@@ -56,7 +56,7 @@
             </div>
         </section>
 
-        <section class="order">
+        <section class="order" id="order">
             <div class="container">
                 <div class="order__inner">
                     <form action="#" class="order__form form">
@@ -80,9 +80,9 @@
 
         <footer class="footer">
             <ul class="footer__nav">
-                <li><a href="#">Main</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Order</a></li>
+                <li><a href="#main">Main</a></li>
+                <li><a href="#about">About us</a></li>
+                <li><a href="#order">Order</a></li>
             </ul>
             <div class="container">
                 <div class="footer__bottom">
@@ -108,7 +108,7 @@
                                 <img src="img/yt.svg" alt="">
                             </a>
                         </div>
-                        <a href="#" class="button footer__button">Order</a>
+                        <a href="#order" class="button footer__button">Order</a>
                     </div>
                     <div class="footer__row">
                         <span class="footer__copy">© 2024, Copyright.</span>
