--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                             <input class="form__input" type="text" name="name" placeholder="Name" required>
                         </div>
                         <div class="form__field">
-                            <input class="form__input" type="email" name="name" placeholder="E-mail" required>
+                            <input class="form__input" type="email" name="email" placeholder="E-mail" required>
                         </div>
                         <div class="form__field form__field_check">
-                            <input class="form__check" type="checkbox" name="check" id="check" placeholder="name" required>
+                            <input class="form__check" type="checkbox" name="accept" id="check" placeholder="name" required>
                             <label for="check">I accept the terms</label>
                         </div>
                         <button type="submit" class="form__button">Submit form</button>
